chore: [performance] avoid calls to Arrays.asList() with at most one argument