@@ -1130,7 +1130,8 @@ public abstract class Element implements Cloneable {
 
             List<KeyValuePair> pairs = new ArrayList<KeyValuePair>();
             for (Map.Entry<String, Object> entry : attrs.mAttributes.entrySet()) {
-                List<?> values = (entry.getValue() instanceof List<?> ? (List<?>) entry.getValue() : Arrays.asList(entry.getValue()));
+                List<?> values = (entry.getValue() instanceof List<?> ? (List<?>) entry.getValue() : List.of(
+                    entry.getValue()));
                 for (Object multi : values) {
                     if (multi instanceof KeyValuePair)
                         pairs.add((KeyValuePair) multi);
