@@ -47,6 +47,7 @@ import com.zimbra.soap.mail.type.EmailAddrInfo;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import javax.mail.MessagingException;
@@ -114,7 +115,7 @@ public class SendShareNotification extends MailDocumentHandler {
 
     Element eShare = request.getOptionalElement(MailConstants.E_SHARE);
     if (eShare != null) {
-      return Arrays.asList(validateShareRecipient(zsc, context, octxt, mbox, eShare));
+      return List.of(validateShareRecipient(zsc, context, octxt, mbox, eShare));
     }
 
     String action = request.getAttribute(MailConstants.A_ACTION, null);
